# Programming-Technology

./: .gitignore
1st homework/: AbstractUnits.h  CMakeLists.txt  ConcreteUnits.h  Counter-Terrorists.h  Creators.h  README.md  Terrorists.h  main.cpp
1stHomework/: AbstractUnits.h  CMakeLists.txt  ConcreteUnits.h  Counter-Terrorists.cpp  Counter-Terrorists.h  Creators.h  PrintInfo.h  README.md  Terrorists.h  main.cpp
1stHomework/Counter-Terrorists/: Counter-Terrorists.h
1stHomework/Creator/: Creators.h
1stHomework/Information/: PrintInfo.h
1stHomework/Terrorists/: Terrorists.cpp  Terrorists.h
1stHomework/Units/: ConcreteUnits.h
2ndHomework/: CMakeLists.txt  README.md  main.cpp
2ndHomework/Counter-Terrorists/: Counter-Terrorists.cpp  Counter-Terrorists.h
2ndHomework/Creator/: Creators.h
2ndHomework/Decorator/: Upgrades.h
2ndHomework/Information/: PrintInfo.cpp
2ndHomework/Proxy/: ProxyCounterTerrorists.cpp  ProxyCounterTerrorists.h  ProxyTerrorists.cpp  ProxyTerrorists.h
3rdHomework/: CMakeLists.txt  README.md  main.cpp
3rdHomework/Command/: Command.cpp  Command.h
3rdHomework/Counter-Terrorists/: Counter-Terrorists.cpp  Counter-Terrorists.h
3rdHomework/Decorator/: Upgrades.h
3rdHomework/Gameplay/: Gameplay.cpp  Gameplay.h
3rdHomework/Information/: PrintInfo.cpp  PrintInfo.h
3rdHomework/Observer/: Observer.cpp  Observer.h
3rdHomework/Proxy/: ProxyCounterTerrorists.h  ProxyTerrorists.h
3rdHomework/Terrorists/: Terrorists.cpp  Terrorists.h
3rdHomework/Testing/: Testing.cpp
3rdHomework/Units/: ConcreteUnits.h
(+5 files in other folders)
